# geopolitical-options-lab

./: README.md  pyproject.toml  requirements.txt
dashboard/: dashboard.html
data/phase2_synthetic_market_data/cleaned/: GLD_clean.csv  JETS_clean.csv  SPY_clean.csv  USO_clean.csv  XLE_clean.csv  XLV_clean.csv  XLY_clean.csv
data/phase3_synthetic_implied_vol/: GLD_iv.csv  JETS_iv.csv  SPY_iv.csv  USO_iv.csv  XLE_iv.csv  XLV_iv.csv  XLY_iv.csv
data/phase4_synthetic_surfaces/: GLD_surface.csv  JETS_surface.csv  SPY_surface.csv  USO_surface.csv  XLE_surface.csv  XLV_surface.csv  XLY_surface.csv  cross_asset_comparison.csv
data/phase5_real_event_study/: correlation_shifts.csv  event_metrics.csv
data/phase6_real_hedging/: hedge_greeks.csv  protection_efficiency.csv  scenario_results.csv
data/phase7_real_model_risk/: constant_vol_comparison.csv  delta_hedge_results.csv  pricing_error.csv
data/real_historical_prices/: GLD.csv  JETS.csv  OVX.csv  SPY.csv  USO.csv  VIX.csv  XLE.csv  XLV.csv  XLY.csv  events.csv
notebooks/: 01_black_scholes_engine.ipynb  02_market_data_cleaning.ipynb  03_implied_volatility.ipynb  04_volatility_surfaces.ipynb  05_geopolitical_event_study.ipynb  06_portfolio_hedging.ipynb  07_model_risk.ipynb
scripts/: fetch_event_data.py
src/geopolitical_options/: __init__.py  black_scholes.py  event_study.py  greeks.py  hedging.py  implied_volatility.py  model_risk.py
tests/: test_black_scholes.py  test_event_study_and_model_risk.py  test_greeks.py  test_hedging.py  test_implied_volatility.py
(+7 files in other folders)
